# AI-PM-essential-skills

./: AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
context-port/: BUILD_SPEC.md  HANDOFF.md  README.md  SESSION.json  SESSION.md  STATE.md  chatgpt_adapter.py  claude_converter.py  contextport.py  contextport_build.py  demo.py  install.py  pyproject.toml  readiness.py  reconciliation.py  reconstruction.py  review.py  segregation.py  session.py  sync.py
context-port/decisions/: 002-standalone-public-boundary.md  003-contextport-only-product-scope.md  004-segregation-contract.md  005-review-sampling.md  006-reconstruction-plan.md
context-port/docs/: ARCHITECTURE.md  CAPABILITIES.md  CHATGPT_ADAPTER.md  CLI.md  CONTEXTPACK.md  CONTRIBUTION_WORKFLOW.md  DEMO.md  EXPORT_INSPECTION.md  HUMAN_REVIEW.md  INCREMENTAL_SYNC.md  INSTALLER.md  OPERATOR_GUIDE.md  PACKAGING.md  PRIVACY.md  PROJECT_SEGREGATION.md  README.md  RECONCILIATION.md  RECONSTRUCTION.md  RELEASE_READINESS.md  SESSION.md
context-port/evals/: 002-contextpack-validation.md  003-safe-export-inspection.md  004-project-segregation.md  005-hitl-review-ui.md  006-reconstruction-engine.md  007-reconciliation-reviewer.md  008-incremental-sync.md  009-chatgpt-adapter.md  010-cli.md  011-packaging.md  012-installer.md  013-demo.md  014-documentation.md  015-release-readiness.md
context-port/fixtures/: contextpack-invalid.json  contextpack-valid.json  project-mappings-ambiguous.json  project-mappings-valid.json  reconstruction-plan-synthetic.json  review-decision-approved.json  review-decision-rejected.json  (+3 more)
(+113 files in other folders)
