[build-system]
requires = []
build-backend = "contextport_build"
backend-path = ["."]

[project]
name = "contextport"
version = "0.1.0"
description = "Local-first, human-supervised conversational context portability"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Abhillash Jadhav", email = "abhilashjadhav@gmail.com"}]
dependencies = []

[project.scripts]
contextport = "contextport:main"

[project.urls]
Repository = "https://github.com/Abhillashjadhav/AI-PM-essential-skills/tree/main/context-port"
